updated css styling to be more responsive

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         </div>
         <div id="page">
           <div id="pagemain">
+            <div id ="pagemain-children">
             <h1>Your Projects</h1>
             <div id="projects">
               <div class="project">
@@ -337,19 +338,26 @@
               </div>
             </div>
           </div>
+          </div>
           <div id="notes">
-            <div>
+            <div class = "notes-child">
               <h1>Announcements</h1>
               <div id="announcements">
-                  <a href="#maintenance" class="announcelinks">
+                  <a href="#maintenance" class="announcelinks" id ="maintenance">
                     <p class="announcetitle">Site Maintenance</p>
                     <p class="announcedescription">Magna eget est lorem ipsum dolor sit amet consectetur adipiscing. Egestas erat imperdiet sed euismod. Lacus sed turpis tincidunt id. Neque viverra justo nec ultrices dui sapien eget mi. Massa tempor nec feugiat nisl. Sapien eget mi proin sed libero enim sed faucibus turpis. Eget duis at tellus at. Nibh ipsum consequat nisl vel pretium. Sed cras ornare arcu dui vivamus arcu felis bibendum ut. At erat pellentesque adipiscing commodo. Velit euismod in pellentesque massa placerat duis ultricies lacus sed. Nisl purus in mollis nunc sed id semper risus. Quis hendrerit dolor magna eget est.</p>
                   </a>
-                    <div class="note title">Community Share Day</div>
-                <div class="note title">Updated Privacy Policy</div>
+                  <a href="#maintenance" class="announcelinks" id = "commshareday">
+                    <p class="announcetitle">Community Share Day</p>
+                    <p class="announcedescription">Bibendum neque egestas congue quisque egestas diam in arcu. Netus et malesuada fames ac turpis egestas sed tempus. Enim blandit volutpat maecenas volutpat blandit. Donec et odio pellentesque diam volutpat.</p>
+                  </a>
+                  <a href="#maintenance" class="announcelinks">
+                    <p class="announcetitle">Updated Privacy Policy</p>
+                    <p class="announcedescription">Amet dictum sit amet justo donec enim diam. Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet consectetur. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare. Eu turpis egestas pretium aenean pharetra magna ac. Eu mi bibendum neque egestas congue. A pellentesque sit amet porttitor. Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi.</p>
+                  </a>
               </div>
             </div>
-            <div>
+            <div class = "notes-child">
               <h1>Trending</h1>
               <div id="trending">
                 <div class="profile">
