--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ul>
             <li>
               <img class="side_icon" src="icons/home.svg" alt="home" /><a
-                href="#home"
+                class="sidelink" href="#home"
                 >Home</a
               >
             </li>
@@ -31,17 +31,17 @@
                 class="side_icon"
                 src="icons/account-circle.svg"
                 alt="profile"
-              /><a href="#profile">Profile</a>
+              /><a class="sidelink"href="#profile">Profile</a>
             </li>
             <li>
               <img class="side_icon" src="icons/message.svg" alt="message" /><a
-                href="#messages"
+              class="sidelink" href="#messages"
                 >Messages</a
               >
             </li>
             <li>
               <img class="side_icon" src="icons/history.svg" alt="history" /><a
-                href="#history"
+              class="sidelink" href="#history"
                 >History</a
               >
             </li>
@@ -50,19 +50,19 @@
                 class="side_icon"
                 src="icons/checkbox-multiple-marked.svg"
                 alt="tasks"
-              /><a href="#tasks">Tasks</a>
+              /><a class="sidelink" href="#tasks">Tasks</a>
             </li>
             <li>
               <img
                 class="side_icon"
                 src="icons/account-group.svg"
                 alt="communities"
-              /><a href="#commmunities">Communities</a>
+              /><a class="sidelink" href="#commmunities">Communities</a>
             </li>
             <br />
             <li>
               <img class="side_icon" src="icons/cogs.svg" alt="settings" /><a
-                href="#settings"
+              class="sidelink" href="#settings"
                 >Settings</a
               >
             </li>
@@ -71,14 +71,14 @@
                 class="side_icon"
                 src="icons/help-rhombus.svg"
                 alt="support"
-              /><a href="#support">Support</a>
+              /><a class="sidelink" href="#support">Support</a>
             </li>
             <li>
               <img
                 class="side_icon"
                 src="icons/shield-key.svg"
                 alt="privacy"
-              /><a href="#privacy">Privacy</a>
+              /><a class="sidelink" href="#privacy">Privacy</a>
             </li>
           </ul>
         </div>
@@ -87,12 +87,12 @@
         <div id="header">
           <div id="headersearch">
             <div id="searchbar">
-              <img
+              <button id="searchbutton"><img
                 class="main_icon"
                 id="search_icon"
                 src="icons/magnify.svg"
                 alt="search"
-              /><input type="text" />
+              /></button><input type="text" />
             </div>
             <div id="notif_name">
               <button id="alert">
@@ -141,7 +141,7 @@
             <div id="projects">
               <div class="project">
                 <div>
-                  <span class="title">Super Cool Project</span>
+                  <a class="title" href="#supercool">Super Cool Project</a>
                   <p class="project_description">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna
@@ -174,7 +174,7 @@
               </div>
               <div class="project">
                 <div>
-                  <span class="title">Less Cool Project</span>
+                  <a class="title" href="#lesscool">Less Cool Project</a>
                   <p class="project_description">
                     Ut ornare lectus sit amet est. Ligula ullamcorper malesuada
                     proin libero nunc. Sed cras ornare arcu dui. Fames ac turpis
@@ -207,7 +207,7 @@
               </div>
               <div class="project">
                 <div>
-                  <span class="title">Impossible App</span>
+                  <a class="title" href="#imposs">Impossible App</a>
                   <p class="project_description">
                     Fringilla phasellus faucibus scelerisque eleifend donec.
                     Proin sed libero enim sed faucibus turpis in.
@@ -239,7 +239,7 @@
               </div>
               <div class="project">
                 <div>
-                  <span class="title">Easy Peasy App</span>
+                  <a class="title" href="#easypeasy">Easy Peasy App</a>
                   <p class="project_description">
                     Pellentesque nec nam aliquam sem. Vitae congue mauris
                     rhoncus aenean. Mauris ultrices eros in cursus. Sollicitudin
@@ -273,7 +273,7 @@
               </div>
               <div class="project">
                 <div>
-                  <span class="title">Ad Blocker</span>
+                  <a class="title" href="adblock">Ad Blocker</a>
                   <p class="project_description">
                     Ultrices dui sapien eget mi proin sed libero. Amet luctus
                     venenatis lectus magna fringilla urna porttitor. Tellus in
@@ -306,7 +306,7 @@
               </div>
               <div class="project">
                 <div>
-                  <span class="title">Money Maker</span>
+                  <a class="title" href="#moneymaker">Money Maker</a>
                   <p class="project_description">
                     Leo duis ut diam quam nulla porttitor massa id. Et magnis
                     dis parturient montes nascetur ridiculus mus mauris vitae.
@@ -360,6 +360,7 @@
             <div class = "notes-child">
               <h1>Trending</h1>
               <div id="trending">
+                <a class="profilelink">
                 <div class="profile">
                     <div class="small_profile" id="gojo">
                     <img
@@ -373,6 +374,8 @@
                     <div class="projectname">Impossible Project</div>
                   </div>
                 </div>
+              </a>
+              <a class="profilelink">
                 <div class="profile"><div id="sukuna_profile" id="gojo">
                     <img
                       class="profile_icon"
@@ -385,6 +388,8 @@
                   <div class="projectname">Super Cool Project</div>
                 </div>
               </div>
+            </a>
+            <a class="profilelink">
                 <div class="profile"><div id="panda_profile" id="gojo">
                     <img
                       class="profile_icon"
@@ -397,6 +402,8 @@
                   <div class="projectname">Easy Peasy App</div>
                 </div>
               </div>
+            </a>
+            <a class="profilelink">
                 <div class="profile"><div id="nanami_profile" id="gojo">
                     <img
                       class="profile_icon"
@@ -409,6 +416,7 @@
                   <div class="projectname">Money Maker</div>
                 </div>
               </div>
+            </a>
               </div>
             </div>
           </div>
