Updated to be responsive on smaller screens

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   src="icons/icons8-satoru-gojo.svg"
                 />
               </div>
-              <span>Satoru Gojo</span>
+              <p id="toprightprofilename">Satoru Gojo</p>
             </div>
           </div>
           <div id="intro">
@@ -127,7 +127,7 @@
                 <div id="largetext">Satoru Gojo (@gojo)</div>
               </div>
             </div>
-            <div>
+            <div id="createbuttons">
               <button class="create">New</button>
               <button class="create">Upload</button>
               <button class="create">Share</button>
